# capstone

./: .env  .gitignore  db.sqlite3  notes.md  pyproject.toml
auth/: admin.py  views.py
authentication/: admin.py  forms.py  models.py  views.py
authuser/: admin.py  forms.py  models.py  serializers.py  views.py
authuser/migrations/: 0001_initial.py  0002_alter_profile_bio.py  0002_alter_profile_credit.py  0003_profile_profile_pic.py
config/: .env  settings.py  urls.py
project/: admin.py  external_url.py  forms.py  models.py  views.py
project/migrations/: 0001_initial.py  0002_auto_20211008_0110.py  0002_auto_20211017_1201.py  0002_auto_20211017_1855.py  0003_auto_20211008_1603.py
templates/: 404.html  500.html  comment.html  comment_list.html  community.html  community_id.html  generic_form.html  google.html  index.html  index1.html  login.html  navbar.html  post.html  profile.html  signup.html
