[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["zaska-afk <zacharybalaska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-external-urls = "^0.3"
djangorestframework = "^3.12.4"
django-allauth = "^0.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
